syntax = "proto3";

package customer;

service CustomerService {
  rpc CreateCustomer (CreateCustomerRequest) returns (CustomerResponse);
  rpc UpdateCustomer (UpdateCustomerRequest) returns (CustomerResponse);
  rpc DeleteCustomer (DeleteCustomerRequest) returns (CustomerResponse);
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);
  rpc GetCustomers (Empty) returns (CustomersListResponse);
}

message CreateCustomerRequest {
  string name = 1;
  string phone = 2;
  string address = 3;
}

message UpdateCustomerRequest {
  int32 customer_id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
}

message DeleteCustomerRequest {
  int32 customer_id = 1;
}

message GetCustomerRequest {
  int32 customer_id = 1;
}

message Empty {}

message CustomerResponse {
  int32 customer_id = 1;
  string name = 2;
  string phone = 3;
  string address = 4;
}

message CustomersListResponse {
  repeated CustomerResponse customers = 1;
}
